modified  frontend yml

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -159,7 +159,7 @@
 
                <div class="twelve columns">
 
-                  <h3>Guru</h3>
+                  <h3>Schvertex</h3>
                   <p class="info">to build <span>&bull;</span> <em class="date">June 2023 - Present</em></p>
 
                   <p>
@@ -174,13 +174,13 @@
 
                <div class="twelve columns">
 
-                  <h3>to enter</h3>
+                  <h3>Copie Select </h3>
                   <p class="info">Cloud Engineer <span>&bull;</span> <em class="date">from to</em></p>
 
                   <p>
-                     <li>line 1 Azure</li>
-                     <li>line 2</li>
-                     <li>line 3</li>
+                     <li>Branch In Charge</li>
+                     <li>Production and Service in printing</li>
+                     <li>System administrator </li>
                   </p>
 
                </div>
