changes in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
 
             <h2>ABOUT ME</h2>
 
-            <p> This is Prouchotte , focused on learning cloud and documenting the mistakes to help others their process simple and easy.
+            <p> This is Prouchotte , focused on learning cloud and documenting the mistakes to help others in their process simple and easy.
                
          </br>
       </br>
@@ -159,7 +159,7 @@
 
                <div class="twelve columns">
 
-                  <h3>Schvertex</h3>
+                  <h3>Schveratex</h3>
                   <p class="info">to build <span>&bull;</span> <em class="date">June 2023 - Present</em></p>
 
                   <p>
@@ -175,7 +175,7 @@
                <div class="twelve columns">
 
                   <h3>Copie Select </h3>
-                  <p class="info">Cloud Engineer <span>&bull;</span> <em class="date">from to</em></p>
+                  <p class="info">Branch in charge <span>&bull;</span> <em class="date">from to</em></p>
 
                   <p>
                      <li>Branch In Charge</li>
@@ -185,61 +185,7 @@
 
                </div>
 
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3> Company</h3>
-                  <p class="info">System Administrator <span>&bull;</span> <em class="date">September 2018 - May 2019</em></p>
-
-                  <p>
-                     <li>line 1 Azure</li>
-                     <li>line 2</li>
-                     <li>line 3</li>
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <div class="twelve columns">
-
-                     <h3> Company 3</h3>
-                     <p class="info">System Administrator <span>&bull;</span> <em class="date">September 2018 - May 2019</em></p>
-   
-                     <p>
-                        <li>line 1 Azure</li>
-                        <li>line 2</li>
-                        <li>line 3</li>
-                     </p>
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <div class="twelve columns">
-
-                     <h3> Company</h3>
-                     <p class="info">System Administrator <span>&bull;</span> <em class="date">September 2018 - May 2019</em></p>
-   
-                     <p>
-                        <li>line 1 Azure</li>
-                        <li>line 2</li>
-                        <li>line 3</li>
-                     </p>
-               </div>
-
-            </div> <!-- item end -->
-
+            
          </div> <!-- main-col end -->
 
       </div> <!-- End Work -->
