checking the new  changes in html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -174,18 +174,34 @@
 
                <div class="twelve columns">
 
-                  <h3>Copie Select </h3>
+                  <h3>Own business </h3>
                   <p class="info">Branch in charge <span>&bull;</span> <em class="date">from to</em></p>
 
                   <p>
-                     <li>Branch In Charge</li>
+                     <li>Managing and running a printing store</li>
                      <li>Production and Service in printing</li>
                      <li>System administrator </li>
                   </p>
 
                </div>
 
-            
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Copie Select </h3>
+                  <p class="info">Branch in charge <span>&bull;</span> <em class="date">from to</em></p>
+
+                  <p>
+                     <li>Managing and running Branch</li>
+                     <li>Production and Service in printing</li>
+                     <li>System administrator </li>
+                  </p>
+
+               </div>
+
          </div> <!-- main-col end -->
 
       </div> <!-- End Work -->
