--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Hi, Prouchotte here ...........</h1>
+            <h1 class="responsive-headline">Hi, this is Prouchotte here ........</h1>
             
             <p>and this page has been viewed <a id="counter"></a> times :) </p> 
             <ul class="social">
